NN/force-app/main/default/objects/NN_Countrylayer__c/NN_Countrylayer__c.object-meta.xml
<CustomObject>
    <label>Countrylayer</label>
    <nameField>
        <label>Countrylayer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countrylayers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>