NN/force-app/main/default/objects/NN_Countrylayer__c/fields/Alpha2code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2code__c</fullName>
    <externalId>true</externalId>
    <label>Alpha2code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>