NN/force-app/main/default/objects/NN_Countrylayer__c/fields/Alpha3code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3code__c</fullName>
    <externalId>true</externalId>
    <label>Alpha3code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>