NN/force-app/main/default/objects/NN_Countrylayer__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <label>Capital City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>